fix output overflow for some numbers

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ input:focus {
   color: #55433b;
   text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
   border: thick double #55433b;
+  overflow: auto;
 }
 
 .output.error {
